--- a/RELEASE/EFI/OC/config.plist
+++ b/RELEASE/EFI/OC/config.plist
@@ -1109,7 +1109,7 @@
 			<key>PickerMode</key>
 			<string>External</string>
 			<key>PickerVariant</key>
-			<string>Auto</string>
+			<string>chris1111\FlatMonterey</string>
 			<key>PollAppleHotKeys</key>
 			<false/>
 			<key>ShowPicker</key>
