--- a/RELEASE/EFI/OC/config.plist
+++ b/RELEASE/EFI/OC/config.plist
@@ -1097,7 +1097,7 @@
 			<key>HibernateMode</key>
 			<string>None</string>
 			<key>HideAuxiliary</key>
-			<false/>
+			<true/>
 			<key>LauncherOption</key>
 			<string>Disabled</string>
 			<key>LauncherPath</key>
@@ -1380,6 +1380,16 @@
 		<array>
 			<dict>
 				<key>Comment</key>
+				<string>ext4_x64.efi</string>
+				<key>Path</key>
+				<string>ext4_x64.efi</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Arguments</key>
+				<string></string>
+			</dict>
+			<dict>
+				<key>Comment</key>
 				<string>HfsPlus.efi</string>
 				<key>Path</key>
 				<string>HfsPlus.efi</string>
@@ -1393,6 +1403,16 @@
 				<string>OpenCanopy.efi</string>
 				<key>Path</key>
 				<string>OpenCanopy.efi</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Arguments</key>
+				<string></string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>OpenLinuxBoot.efi</string>
+				<key>Path</key>
+				<string>OpenLinuxBoot.efi</string>
 				<key>Enabled</key>
 				<true/>
 				<key>Arguments</key>
